Change the formatting to the one created by bumpup.

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,9 @@
 {
     "name": "zerobox",
     "version": "0.1.0",
-    "main": ["zerobox.js"],
+    "main": [
+        "zerobox.js"
+    ],
     "dependencies": {
         "jquery": ">=1.7.0"
     }
