--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "grunt-contrib-uglify": "0.2.0",
         "grunt-contrib-copy": "0.4.1",
         "grunt-contrib-jshint": "0.4.3",
-        "grunt-bumpup": "0.2.0"
+        "grunt-bumpup": "0.2.0",
+        "grunt-jsdoc" : "0.3.3"
     },
     "keywords": [
         "jquery",
