The release task tags the last commit with an annotated tag.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "grunt-contrib-copy": "0.4.1",
         "grunt-contrib-jshint": "0.4.3",
         "grunt-bumpup": "0.2.0",
-        "grunt-jsdoc" : "0.3.3"
+        "grunt-jsdoc" : "0.3.3",
+        "grunt-tagrelease": "0.2.0"
     },
     "keywords": [
         "jquery",
